Opened 12 years ago

Closed 12 years ago

#3670 closed defect (fixed)

Assertion failure on seek with AVI file

Reported by: cgbug Owned by:
Priority: important Component: avformat
Version: git-master Keywords: avi crash abort
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Sample:
http://rapidshare.com/share/C974ECA93412975F0E933DB3794D1438
(rename to .zip)

Triggers this assertion failure on seek:

Assertion (int64_t)st2->time_base.num * ast2->rate == (int64_t)st2->time_base.den * ast2->scale failed at /home/kyle/software/ffmpeg/source/ffmpeg-git/libavformat/avidec.c:1784

ffplay version N-63401-g9722a6a

command line:
ffplay -ss 10 clip.avi

Attachments (1)

clip_cut.avi (2.4 MB ) - added by Carl Eugen Hoyos 12 years ago.

Change History (4)

comment:1 by Carl Eugen Hoyos, 12 years ago

Keywords: avi crash abort added
Priority: normalimportant
Reproduced by developer: set
Status: newopen

For future tickets: Please always provide your failing command line together with the complete, uncut console output and please always test ffmpeg.

Not a regression.

$ ffmpeg -ss 1 -i clip_cut.avi -f null -
ffmpeg version N-63405-g7263162 Copyright (c) 2000-2014 the FFmpeg developers
  built on May 24 2014 15:46:50 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 86.100 / 52. 86.100
  libavcodec     55. 64.100 / 55. 64.100
  libavformat    55. 40.100 / 55. 40.100
  libavdevice    55. 13.101 / 55. 13.101
  libavfilter     4.  5.100 /  4.  5.100
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 19.100 /  0. 19.100
  libpostproc    52.  3.100 / 52.  3.100
st:0 has too large timebase, reducing
[mp3 @ 0x33c3280] Header missing
    Last message repeated 3 times
Assertion (int64_t)st2->time_base.num * ast2->rate == (int64_t)st2->time_base.den * ast2->scale failed at libavformat/avidec.c:1784
Aborted

by Carl Eugen Hoyos, 12 years ago

Attachment: clip_cut.avi added

comment:2 by Carl Eugen Hoyos, 12 years ago

$ ffmpeg -i clip_cut.avi
ffmpeg version N-63405-g7263162 Copyright (c) 2000-2014 the FFmpeg developers
  built on May 24 2014 15:46:50 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 86.100 / 52. 86.100
  libavcodec     55. 64.100 / 55. 64.100
  libavformat    55. 40.100 / 55. 40.100
  libavdevice    55. 13.101 / 55. 13.101
  libavfilter     4.  5.100 /  4.  5.100
  libswscale      2.  6.100 /  2.  6.100
  libswresample   0. 19.100 /  0. 19.100
  libpostproc    52.  3.100 / 52.  3.100
st:0 has too large timebase, reducing
[mp3 @ 0x22341c0] Header missing
    Last message repeated 3 times
Input #0, avi, from 'clip_cut.avi':
  Duration: 00:00:16.20, start: 0.000000, bitrate: 1264 kb/s
    Stream #0:0: Video: mpeg4 (Simple Profile) (XVID / 0x44495658), yuv420p, 464x352 [SAR 1:1 DAR 29:22], 26.54 fps, 25 tbr, 26.54 tbn, 25 tbc
    Stream #0:1: Audio: mp3 (U[0][0][0] / 0x0055), 44100 Hz, stereo, s16p, 128 kb/s
At least one output file must be specified

comment:3 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.